--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -1141,6 +1142,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
@@ -1151,6 +1153,7 @@
   <h3>GitHub Actions</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -2194,6 +2197,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -2201,6 +2205,7 @@
   <h3>Cloudflare Workers</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -3244,6 +3249,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3251,6 +3257,7 @@
   <h3>Notion</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -4294,6 +4301,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4819,6 +4827,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4826,6 +4835,7 @@
   <h3>x</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
