--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -1151,6 +1152,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
@@ -1161,6 +1163,7 @@
   <h3>GitHub Actions</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -2214,6 +2217,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -2221,6 +2225,7 @@
   <h3>Cloudflare Workers</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -3274,6 +3279,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3281,6 +3287,7 @@
   <h3>Notion</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -4334,6 +4341,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4864,6 +4872,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4871,6 +4880,7 @@
   <h3>x</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
