--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -1173,6 +1174,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
@@ -1183,6 +1185,7 @@
   <h3>GitHub Actions</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -2258,6 +2261,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -2265,6 +2269,7 @@
   <h3>Cloudflare Workers</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -3340,6 +3345,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3347,6 +3353,7 @@
   <h3>Notion</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -4422,6 +4429,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4963,6 +4971,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -4970,6 +4979,7 @@
   <h3>x</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
